# otus14hw6

./: .travis.yml  CMakeLists.txt  README.md
include/: matrix.h  matrix_utils.h  version.h.in
src/: CMakeLists.txt  main.cpp  version.cpp
test/: CMakeLists.txt  testall.cpp
